Fix access to indexers in cache